# CliOuDE

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  app.py  config-overrides.js  docker-compose.yaml  editor.yaml  language_server.py  languages.py  lsphub.yaml  nginx.yaml  orm.py  package.json  server.yaml  worker.yaml
alembic/: env.py
clioude-deploy/: .gitignore  README.md  editor.yaml  lsphub.yaml  postgres.yaml  server.yaml  worker.yaml
clioude-editor/: Dockerfile  README.md  package.json
clioude-kernel/: Dockerfile  README.md
clioude-lsphub/: Dockerfile  README.md  app.py  language_server.py
clioude-runenv/: Dockerfile  README.md
clioude-runhub/: README.md  client.go  go.mod  hub.go  integration_test.go  main.go  runner.go  session.go
clioude-runner/: .gitignore  Cargo.toml  README.md
clioude-runner/etc/: languages.json
clioude-runner/src/: main.rs
clioude-server/: .gitignore  Dockerfile  README.md  app.py
clioude-tester/: README.md  package.json
clioude-worker/: Dockerfile  README.md  kernel
clioude-worker/kernel/: CMakeLists.txt
clioude-worker/kernel/src/: killer.c  logger.h  runner.c
clioude-worker/kernel/src/rules/: seccomp_rules.h
deploy-k8s/: hub.yaml  runner.yaml
editor/: README.md  config-overrides.js  package.json
heartbeat/: handler.py
hub/: Dockerfile  README.md  client.go  go.mod  go.sum  hub.go  integration_test.go  language.go  main.go  makefile  runner.go  session.go
jsonrpc/: reader.py  (+1 more)
runner/: Cargo.toml  Dockerfile  README.md
runner/etc/: languages.json
runner/src/: main.rs
(+83 files in other folders)
